--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -41,6 +41,7 @@ body{
 
     width: 100%;
     background:rgba(255,255,255,0.5);
+    display: none;
 }
 
 .slider1, .slider2
@@ -49,13 +50,14 @@ body{
 }
 
 .outer {
-    width: 400px;
-    height: 650px;
+    width: 300px;
+    height: 505px;
     overflow: auto;
+
 }
 .inner {
-    width: 400px;
-    height:800px;
+    width: 300px;
+    height:505px;
 }
 
 table, th, td {
@@ -71,12 +73,19 @@ table, th, td {
     opacity: .1;
 }
 
+
+
 .subunit-label {
   fill: black;
   
-  font-size: 6px;
+  font-size: 8px;
   font-weight: 300;
-  text-anchor: middle;
+  text-anchor: end;
+  opacity: 0;
+}
+.geo-text-select {
+    
+    opacity: 1;
 }
 
 .scatter-text {
@@ -86,3 +95,14 @@ table, th, td {
   font-weight: 300;
   
 }
+
+div#loading {
+      width:100%;
+      height:100%; /* make sure you have set parents to a height of 100% too*/
+      position: absolute;
+      left:400px; top:300px;
+      z-index:10; 
+      
+    background: url(../images/now-loading.gif) no-repeat;
+    
+    }
